--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-### *whoa, hey an open-source*
+### *I like Magic*
 {: .text-purple}
 
 <span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
