--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,22 +1,26 @@
 ---
 title: "home"
-bg: blue
-color: black
+bg: Black
+color: Blue
 style: center
 ---
 
-### *Magic is my Passion*
-{: .text-black}
+<img src="img/Orem Library 2017-18.jpg" alt="Orem Library">
+<img src="img/GSM.png" alt="Great Scott Magic" width="600" height="400">
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
+
+### *Scott Chamberlain - Magician*
+{: .text-Blue}
+
+<!--<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
   <i class="fa fa-circle fa-stack-2x text-white"></i>
   <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
-</span>
+</span>-->
 
-# Great Scott Magic
-{: .text-black}
+# Magic is my passion!
+{: .text-Blue}
 
 
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
+I love performing magic and giving back to the communities in which I live.
 
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
+[Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)
