--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -6,7 +6,7 @@ style: center
 ---
 
 <img src="img/Orem Library 2017-18.jpg" alt="Orem Library">
-<img src="img/GSM.jpg" alt="Great Scott Magic" width="70%" hight="70%">
+<img src="img/GSM.jpg" alt="Great Scott Magic" width="70%" height="70%">
 
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
