--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,8 +5,7 @@ color: Blue
 style: center
 ---
 
-<img src="img/Orem Library 2017-18.jpg" alt="Orem Library">
-<img src="img/GSM.jpg" alt="Great Scott Magic">
+<img src="img/headerpageandlogo.jpg" alt="Great Scott Magic">
 
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
