--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,7 +1,7 @@
 ---
 title: "home"
 bg: Black
-color: Blue
+color: blue
 style: center
 ---
 
@@ -22,6 +22,8 @@ style: center
 {: .text-Blue}
 
 
-I love performing magic and giving back to the communities in which I live.
+<!--I love performing magic and giving back to the communities in which I live.-->
 
-[Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)
+### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
+### Email me: scottchamberlainmagic@gmail.com<br>
+### (801) 367-1125 Call or Txt
