--- a/_posts/2000-01-03-reviews.md
+++ b/_posts/2000-01-03-reviews.md
@@ -7,9 +7,9 @@ fa-icon: check-square-o
 
 #### Great Scott Magic
 
-# Verified Reviews
+# What do past clients have to say?
 
-Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.
+<!--Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.-->
 
 See full list of all Facebook reviews here: [Facebook Reviews](https://Facebook.com/scottchamberlainmagic/reviews)!
 
@@ -17,7 +17,7 @@ See full list of all Thumbtack reviews here: [Thumbtack Reviews](https://www.thu
 
 See full list of all Google reviews here: [Google Reviews](https://business.google.com/reviews/l/07297420346886679252?hl=en-US)!
 
-- Each vertical section is a markdown file in **_posts/** directory.
+<!--- Each vertical section is a markdown file in **_posts/** directory.
   * They're sorted by 'date'. (we don't use date anywhere, it only sorts)
 - Each vertical section sets it's own **color**, **header icon** (or image), **title**, and easy-to-write markdown body.
 - Only **two things** to edit:
@@ -31,4 +31,4 @@ There are three way to get started: (links jump to that section)
 
 1. Make a [**user homepage**](#setup-as-user-homepage) (or organization)
 2. Make a [**standalone project**](#setup-as-standalone-project-page) page
-3. Make a [site under an **existing project**](#setup-inside-existing-project)
+3. Make a [site under an **existing project**](#setup-inside-existing-project)-->
