--- a/_posts/2000-01-04-photos.md
+++ b/_posts/2000-01-04-photos.md
@@ -1,11 +1,11 @@
 ---
 title: "Photos"
-bg: Black
-color: Blue
+bg: black
+color: blue
 fa-icon: photo
 ---
 
-## Setup as user homepage
+<!--## Setup as user homepage-->
 
 <div class="image-gallery">
 <img src="img/IMG_6956.PNG" width="50%" height="50%"/>
@@ -25,7 +25,7 @@ fa-icon: photo
 </div>
 
 
-- Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
+<!--- Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
 - Rename your new repository to `**username**.github.io`. (click settings in the right column)
 - Clone your repository, **cd into the project**
 - Run `git checkout publish && git branch -m master && git push -u origin master && git branch -D gh-pages` to get the *publish* branch as master for a clean, empty starting point.
@@ -71,4 +71,4 @@ where you can publish changes, posts, images, and such. It won't alter your code
 
 Now hop over to [Usage](#usage) to get it running with your own stuff!
 
-**When you publish changes use `git push -u origin gh-pages`**
+**When you publish changes use `git push -u origin gh-pages`**-->
