--- a/_posts/2000-01-08-contact.md
+++ b/_posts/2000-01-08-contact.md
@@ -1,13 +1,13 @@
 ---
 title: "Contact"
-bg: blue
-color: Black
+bg: black
+color: blue
 fa-icon: magic
 ---
 
-## Updating
+## Contact Me
 
-So you've got a copy running and there's some new update? Let's update!
+<!--So you've got a copy running and there's some new update? Let's update!
 
 1. Checkout your github-pages branch
   - `git checkout gh-pages` for a standalone or existing page
@@ -17,4 +17,4 @@ So you've got a copy running and there's some new update? Let's update!
 3. Update to the new base (using merge)
     1. `git merge singlepage/publish`
 4. You can alternatively update using rebase. This *rewrites history* (**bad**), but it is cleaner.
-    1. `git rebase singlepage/publish`
+    1. `git rebase singlepage/publish`-->
