--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -1,13 +1,13 @@
 ---
 title: "About Me"
-bg: Blue
-color: white
+bg: blue
+color: Black
 fa-icon: magic
 icon: img/sandcadjust.png
 
 ---
 
-Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
+<!--Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
 
 - Edit `_config.yml` to change your title, keywords, and description.
 - Create a new file in `_posts/` called `2014-01-01-intro.md`
@@ -60,4 +60,4 @@ Nifty, right!
 
 
 ### Also see **README.md** [*on github!*](https://github.com/t413/SinglePaged#usage)
-{: style="margin-top:100px;"}
+{: style="margin-top:100px;"}-->
