--- a/_posts/2000-01-07-video.md
+++ b/_posts/2000-01-07-video.md
@@ -1,11 +1,11 @@
 ---
 title: "Video"
-bg: Blue
-color: white
+bg: black
+color: blue
 fa-icon: film
 ---
 
-Having an **embedded media** (photos and video) is often inflexible with a dynamic and **responsive design**.
+<!--Having an **embedded media** (photos and video) is often inflexible with a dynamic and **responsive design**.
 
 ### Embed your video like this:
 {: .left}
@@ -18,6 +18,6 @@ Having an **embedded media** (photos and video) is often inflexible with a dynam
 
 It'll play like this funny video below! Try resizing the page!
 
-Photo layouts are also really cool and dynamically resizable. Check out the photos/gallery section at [magiciansanfrancisco.com](http://magiciansanfrancisco.com) for a demo and see [the source code](https://github.com/strongrobert/MagicianSanFrancisco) for how.
+Photo layouts are also really cool and dynamically resizable. Check out the photos/gallery section at [magiciansanfrancisco.com](http://magiciansanfrancisco.com) for a demo and see [the source code](https://github.com/strongrobert/MagicianSanFrancisco) for how.-->
 
 <div class="icontain"><iframe src="//www.youtube.com/embed/VLzeWVlbWoY" allowfullscreen></iframe></div>
