--- a/_posts/2000-01-03-reviews.md
+++ b/_posts/2000-01-03-reviews.md
@@ -7,15 +7,25 @@ fa-icon: check-square-o
 
 #### Great Scott Magic
 
-# What do past clients have to say?
+# What do past clients have to say?<br><br><br>
+
+## “We are still talking about the magic and it’s been over a month since our show!” - Hillary C.<br><br>
+## “He’s great with the kids, and blew the minds of us adults!” - Jim H.<br><br>
+## “One of the best shows we have ever had, and we have been doing this for 10 summers” - Amanda J.<br><br>
+## “His show was so hilarious, at least one person peed their pants” - Nanette D.<br><br>
+## “I didn't have to entertain anyone! He did all the work!” - Brittany L.<br><br>
+## “He's like a mix between David Copperfield and Mr. Clean.” - Steve P.<br><br>
+## “I got a kick out of watching some teenagers who continually had their minds blown” - Kaylene W.<br><br>
+## “He has the audience of people 4 to 64 in the palm of his hand” - Rachel I.<br><br>
+
 
 <!--Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.-->
 
-See full list of all Facebook reviews here: [Facebook Reviews](https://Facebook.com/scottchamberlainmagic/reviews)!
+#### See full list of all Facebook reviews here: [Facebook Reviews](https://Facebook.com/scottchamberlainmagic/reviews)!
 
-See full list of all Thumbtack reviews here: [Thumbtack Reviews](https://www.thumbtack.com/-Eagle-Mountain-UT/service/2475692)!
+#### See full list of all Thumbtack reviews here: [Thumbtack Reviews](https://www.thumbtack.com/-Eagle-Mountain-UT/service/2475692)!
 
-See full list of all Google reviews here: [Google Reviews](https://business.google.com/reviews/l/07297420346886679252?hl=en-US)!
+#### See full list of all Google reviews here: [Google Reviews](https://business.google.com/reviews/l/07297420346886679252?hl=en-US)!
 
 <!--- Each vertical section is a markdown file in **_posts/** directory.
   * They're sorted by 'date'. (we don't use date anywhere, it only sorts)
