update about me

--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -7,6 +7,18 @@ icon: img/sandcadjust.png
 
 ---
 
+## My name is Scott Chamberlain and I'm currently serving as the Vice President of the Orem Chapter of the Society of American Magicians.  I live in Eagle Mountain, Utah and I love performing for ALL ages.  My style has a very lighthearted feel and works for both younger and older audiences.<br>
+
+## Magic has been in my family for a couple of generations.  My Grandfather, Ralph Adams, was a very well-known magician who performed in Vegas and on TV back in his day and inspires me to do what I do.<br>
+
+## I have been performing since 2014 and love giving back to the community I live in.  
+
+
+<!--<div class="icontain"><iframe src="https://www.youtube.com/embed/IR7bafRqFm8" allowfullscreen></iframe></div>-->
+
+
+---
+
 <!--Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
 
 - Edit `_config.yml` to change your title, keywords, and description.
