--- a/_posts/2000-01-08-contact.md
+++ b/_posts/2000-01-08-contact.md
@@ -5,8 +5,11 @@ color: blue
 fa-icon: magic
 ---
 
-## Contact Me
+## Email, Call, or Text to get a quote for your event:
 
+### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
+### Email me: scottchamberlainmagic@gmail.com<br>
+### (801) 367-1125 Call or Txt
 <!--So you've got a copy running and there's some new update? Let's update!
 
 1. Checkout your github-pages branch
