--- a/_posts/2000-01-07-video.md
+++ b/_posts/2000-01-07-video.md
@@ -19,5 +19,7 @@ fa-icon: film
 It'll play like this funny video below! Try resizing the page!
 
 Photo layouts are also really cool and dynamically resizable. Check out the photos/gallery section at [magiciansanfrancisco.com](http://magiciansanfrancisco.com) for a demo and see [the source code](https://github.com/strongrobert/MagicianSanFrancisco) for how.-->
-
-<div class="icontain"><iframe src="//www.youtube.com/embed/VLzeWVlbWoY" allowfullscreen></iframe></div>
+## Great Scott Magic
+<div class="icontain"><iframe src="//www.youtube.com/embed/VLzeWVlbWoY" allowfullscreen></iframe></div><br><br>
+## Ralph Adams (My Grandfather, My Inspiration)
+<div class="icontain"><iframe width="892" height="669" src="https://www.youtube.com/embed/IR7bafRqFm8" allowfullscreen></iframe></div>
