update for upcoming events

--- a/_posts/2000-01-08-contact.md
+++ b/_posts/2000-01-08-contact.md
@@ -2,7 +2,7 @@
 title: "Contact"
 bg: black
 color: blue
-fa-icon: magic
+fa-icon: envelope
 ---
 
 ## Email, Call, or Text to get a quote for your event:
@@ -10,6 +10,15 @@ fa-icon: magic
 ### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
 ### Email me: scottchamberlainmagic@gmail.com<br>
 ### (801) 367-1125 Call or Txt
+
+## You may also submit your information below and I'll get back to you as soon as possible.
+<form method="POST" action="https://formspree.io/scottchamberlainmagic@gmail.com">
+<center><input type="email" name="email" placeholder="Your email Address">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
+
+
+
 <!--So you've got a copy running and there's some new update? Let's update!
 
 1. Checkout your github-pages branch
