--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -3,13 +3,15 @@ title: "About Me"
 bg: blue
 color: Black
 fa-icon: magic
-icon: img/sandcadjust.png
+icon: img/sandcadjust2.png
 
 ---
 
-## My name is Scott Chamberlain and I'm currently serving as the Vice President of the Orem Chapter of the Society of American Magicians.  I live in Eagle Mountain, Utah and I love performing for ALL ages.  My style has a very lighthearted feel and works for both younger and older audiences.<br>
+## My name is Scott Chamberlain and I'm currently serving as the Vice President of the Orem Chapter of the Society of American Magicians.<br>
 
-## Magic has been in my family for a couple of generations.  My Grandfather, Ralph Adams, was a very well-known magician who performed in Vegas and on TV back in his day and inspires me to do what I do.<br>
+## I live in Eagle Mountain, Utah and I love performing for ALL ages.  My style has a very lighthearted feel and works for both younger and older audiences.<br>
+
+## Magic has been in my family for a few generations.  My Grandfather, Ralph Adams, was a very well-known magician who performed in Vegas and on TV back in his day and inspires me to do what I do.<br>
 
 ## I have been performing since 2014 and love giving back to the community I live in.  
 
