--- a/_posts/2000-01-03-reviews.md
+++ b/_posts/2000-01-03-reviews.md
@@ -9,14 +9,14 @@ fa-icon: thumbs-up
 
 # What do past clients have to say?<br><br><br>
 
-## “We are still talking about the magic and it’s been over a month since our show!” - Hillary C.<br><br>
-## “He’s great with the kids, and blew the minds of us adults!” - Jim H.<br><br>
-## “One of the best shows we have ever had, and we have been doing this for 10 summers” - Amanda J.<br><br>
-## “His show was so hilarious, at least one person peed their pants” - Nanette D.<br><br>
-## “I didn't have to entertain anyone! He did all the work!” - Brittany L.<br><br>
-## “He's like a mix between David Copperfield and Mr. Clean.” - Steve P.<br><br>
-## “I got a kick out of watching some teenagers who continually had their minds blown” - Kaylene W.<br><br>
-## “He has the audience of people 4 to 64 in the palm of his hand” - Rachel I.<br><br>
+## “We are still talking about the magic and it’s been over a month since our show!” - HILLARY C.<br><br>
+## “He’s great with the kids, and blew the minds of us adults!” - JIM H.<br><br>
+## “One of the best shows we have ever had, and we have been doing this for 10 summers” - AMANDA J.<br><br>
+## “His show was so hilarious, at least one person peed their pants” - NANETTE D.<br><br>
+## “I didn't have to entertain anyone! He did all the work!” - BRITTANY L.<br><br>
+## “He's like a mix between David Copperfield and Mr. Clean.” - STEVE P.<br><br>
+## “I got a kick out of watching some teenagers who continually had their minds blown” - KAYLENE W.<br><br>
+## “He has the audience of people 4 to 64 in the palm of his hand” - RACHEL I.<br><br>
 
 
 <!--Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.-->
