update changes from suggestions

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,9 @@ color: orange
 style: center
 ---
 
-<img src="img/headerpageandlogo.jpg" alt="Great Scott Magic">
+<img src="img/GSM center logo.png" alt="Great Scott Magic">
+<div class="icontain"><iframe src="//www.youtube.com/embed/VLzeWVlbWoY" allowfullscreen></iframe></div><br><br>
+
 
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
@@ -13,17 +15,21 @@ style: center
 ### *Scott Chamberlain - Magician*
 {: .text-Blue}
 
+# (801) 367-1125
+### Call or Txt
+<a href="tel:8013671125"><img src="img/phone icon.png" width="10%" height="10%"></a>
+
+
 <!--<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
   <i class="fa fa-circle fa-stack-2x text-white"></i>
   <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
-</span>-->
+</span>
 
 # Magic is my passion!
-{: .text-Blue}
+{: .text-Blue}-->
 
 
 <!--I love performing magic and giving back to the communities in which I live.-->
 
 ### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
-### Email me: scottchamberlainmagic@gmail.com<br>
-### (801) 367-1125 Call or Txt
+### <a href="mailto:scottchamberlainmagic@gmail.com">Email Me</a>
