--- a/_posts/2000-01-08-contact.md
+++ b/_posts/2000-01-08-contact.md
@@ -5,17 +5,19 @@ color: Black
 fa-icon: envelope
 ---
 
-## Email, Call, or Text to get a quote for your event:
+<div class="typeform-widget" data-url="https://scottchamberlain.typeform.com/to/Nevc1v" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=Nevc1v&utm_source=typeform.com-12585900-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div><br>
 
-### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
-### Email me: scottchamberlainmagic@gmail.com<br>
-### (801) 367-1125 Call or Txt
+# (801) 367-1125
+### Call or Txt
+### <center><a href="tel:8013671125"><img src="img/phone icon.png" width="10%" height="10%"></a><br><br>
 
-## You may also submit your information below and I'll get back to you as soon as possible.
+<!--## You may also submit your information below and I'll get back to you as soon as possible<br><br>
+
 <form method="POST" action="https://formspree.io/scottchamberlainmagic@gmail.com">
 <center><input type="email" name="email" placeholder="Your email Address">
   <textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
+  <button type="submit">Send</button>-->
+
 
 
 
