update front page

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: orange
 style: center
 ---
 
-<img src="img/GSM center logo.png" alt="Great Scott Magic">
+
 <div class="icontain"><iframe src="//www.youtube.com/embed/VLzeWVlbWoY" allowfullscreen></iframe></div><br><br>
 
 
@@ -32,4 +32,5 @@ style: center
 <!--I love performing magic and giving back to the communities in which I live.-->
 
 ### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
-### <a href="mailto:scottchamberlainmagic@gmail.com">Email Me</a>
+### <a href="mailto:scottchamberlainmagic@gmail.com">Email Me</a><br>
+<img src="img/GSM center logo.png" alt="Great Scott Magic">
