--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -3,9 +3,9 @@ title: "About Me"
 bg: blue
 color: Black
 fa-icon: magic
-icon: img/sandcadjust2.png
 
 ---
+<!--icon: img/sandcadjust2.png-->
 
 ## My name is Scott Chamberlain.  I'm currently serving as the Vice President of the Orem Chapter of the Society of American Magicians.<br>
 
