--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -11,11 +11,10 @@ style: center
 
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
+<h1>Utah Family Magician</h1>
+<h3>Scott Chamberlain (Great Scott Magic)</h3>
 
-### *Scott Chamberlain - Magician*
-{: .text-Blue}
-
-# (801) 367-1125
+<h1>(801) 367-1125</h1>
 ### Call or Txt
 <a href="tel:8013671125"><img src="img/phone icon.png" width="10%" height="10%"></a>
 
