--- a/_posts/2000-01-02-aboutme.md
+++ b/_posts/2000-01-02-aboutme.md
@@ -1,6 +1,6 @@
 ---
 title: "About Me"
-bg: blue
+bg: turquoise
 color: Black
 fa-icon: magic
 
@@ -13,7 +13,7 @@ fa-icon: magic
 
 ## Magic has been in my family for a few generations.  My Grandfather, Ralph Adams, was a very well-known magician who performed in Vegas and on TV back in his day and inspires me to do what I do.<br>
 
-## I have been performing since 2014 and love giving back to the community I live in.  
+## I have been performing since 2014 and love giving back to the community I live in.
 
 
 <!--<div class="icontain"><iframe src="https://www.youtube.com/embed/IR7bafRqFm8" allowfullscreen></iframe></div>-->
