update new services section

--- a/_posts/2000-01-05-Services.md
+++ b/_posts/2000-01-05-Services.md
@@ -1,19 +1,34 @@
 ---
-title: "About Me"
+title: "Services"
 bg: blue
 color: Black
-fa-icon: user
+fa-icon: magic
+style: center
 
 ---
-<!--icon: img/sandcadjust2.png-->
 
-## My name is Scott Chamberlain.  I'm currently serving as the Vice President of the Orem Chapter of the Society of American Magicians.<br>
+# BIRTHDAY PARTIES<br>
+<img src="img/IMG_7746.jpg" width="45%" height="45%"/>
+## Looking for a fun magician to spice up a birthday party?  I provide a 45 minute to 1 hour party for ALL ages.  My routines include some very funny and baffling magic to leave your guests thoroughly entertained.  Whether your birthday boy/girl is turning 3 or 33, I have a show for you ;)<br><br><br>
 
-## I live in Eagle Mountain, Utah and I love performing for ALL ages.  My style has a very lighthearted feel and works for both younger and older audiences.<br>
+# FAMILY GATHERINGS<br>
+<img src="img/family.jpg" width="45%" height="45%"/>
+## Turn any family reunion (or any other larger event) into a magical time for everyone!  I provide magic that will entertain the youngest child to the oldest skeptic.  My family show is a lightheartedly fun event that everyone will be talking about for days!<br><br><br>
 
-## Magic has been in my family for a few generations.  My Grandfather, Ralph Adams, was a very well-known magician who performed in Vegas and on TV back in his day and inspires me to do what I do.<br>
+# CORPORATE EVENTS AND WORK PARTIES<br>
+<img src="img/Orem Library 2017-18.jpg" width="45%" height="45%"/>
 
-## I have been performing since 2014 and love giving back to the community I live in.
+## Looking for a professional who will entertain for an older crowd?  From close-up card magic to stage show entertainment, I have you covered.  My show tailored for corporate events has a proven record to entertain and awe your guests.  Previous clients include (but are not limited to):<br>
+## DoTerra<br>
+## Young Living<br>
+## GSBS Architects<br>
+## UtahRealEstate.com<br>
+## 2018 Provo Countdown event
+## Utah Recreation and Parks Association<br>
+## Cornbelly's<br>
+## Provo School District<br>
+## Cities of Saratoga Springs, Vineyard, Orem, South Salt Lake, Provo, Eagle Mountain, and Herriman.  
+
 
 
 <!--<div class="icontain"><iframe src="https://www.youtube.com/embed/IR7bafRqFm8" allowfullscreen></iframe></div>-->
