resolve picture issue

--- a/_posts/2000-01-05-Services.md
+++ b/_posts/2000-01-05-Services.md
@@ -8,7 +8,7 @@ style: center
 ---
 
 # BIRTHDAY PARTIES<br>
-<img src="img/IMG_7746.jpg" width="45%" height="45%"/>
+<img src="img/IMG_7746.JPG" width="45%" height="45%"/>
 ## Looking for a fun magician to spice up a birthday party?  I provide a 45 minute to 1 hour party for ALL ages.  My routines include some very funny and baffling magic to leave your guests thoroughly entertained.  Whether your birthday boy/girl is turning 3 or 33, I have a show for you ;)<br><br><br>
 
 # FAMILY GATHERINGS<br>
