--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -12,7 +12,7 @@ style: center
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
 <h1>Utah Family Magician</h1>
-<h3>Scott Chamberlain (Great Scott Magic)</h3>
+<h3>Scott Chamberlain</h3>
 
 <h1>(801) 367-1125</h1>
 ### Call or Txt
