update reviews section

--- a/_posts/2000-01-03-reviews.md
+++ b/_posts/2000-01-03-reviews.md
@@ -16,6 +16,7 @@ fa-icon: thumbs-up
 ## “I got a kick out of watching some teenagers who continually had their minds blown” - KAYLENE W.<br><br>
 ## “He has the audience of people 4 to 64 in the palm of his hand” - RACHEL I.<br><br>
 
+# <img src="img/reviews.jpg" alt="Reviews from Web" width="70%" height="70%">
 
 <!--Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.-->
 
