--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -32,4 +32,4 @@ style: center
 
 ### [Follow me on Facebook](https://www.facebook.com/scottchamberlainmagic)<br>
 ### <a href="mailto:scottchamberlainmagic@gmail.com">Email Me</a><br>
-<img src="img/GSM center logo.png" alt="Great Scott Magic">
+<img src="img/Headshot.jpg" alt="Scott Chamberlain - Great Scott Magic">
