--- a/_posts/2000-01-06-photos.md
+++ b/_posts/2000-01-06-photos.md
@@ -10,6 +10,10 @@ fa-icon: camera-retro
 <div class="image-gallery">
 <img src="img/headshot1.jpg" width="45%" height="45%"/>
 <img src="img/headshot2.jpg" width="45%" height="45%"/>
+<img src="img/UTC2019-1.jpg" width="45%" height="45%"/>
+<img src="img/UTC2019-4.jpg" width="45%" height="45%"/>
+<img src="img/UTC2019-5.jpg" width="45%" height="45%"/>
+<img src="img/UTC2019-7.jpg" width="45%" height="45%"/>
 <img src="img/IMG_6956.PNG" width="45%" height="45%"/>
 <img src="img/street Fair.jpg" width="45%" height="45%"/>
 <img src="img/Orem Library 2017-18.jpg" width="45%" height="45%"/>
@@ -18,9 +22,9 @@ fa-icon: camera-retro
 <img src="img/old mill.jpg" width="45%" height="45%"/>
 <img src="img/Orem Library 2017-34.jpg" width="45%" height="45%"/>
 <img src="img/IMG_7585 better blur.png" width="45%" height="45%"/>
-<img src="img/IMG_7746.JPG" width="45%" height="45%"/>
+<!--<img src="img/IMG_7746.JPG" width="45%" height="45%"/>
 <img src="img/IMG_7820.JPG" width="45%" height="45%"/>
-<!--<img src="img/scott 3.JPG" width="45%" height="45%"/>
+<img src="img/scott 3.JPG" width="45%" height="45%"/>
 <img src="img/IMG_7647 blur.png" width="45%" height="45%"/>
 <img src="img/IMG_7848.JPG" width="45%" height="45%"/>
 <img src="img/IMG_7486.JPG" width="45%" height="45%"/>-->
