--- a/_posts/2000-01-06-photos.md
+++ b/_posts/2000-01-06-photos.md
@@ -8,20 +8,22 @@ fa-icon: camera-retro
 <!--## Setup as user homepage-->
 
 <div class="image-gallery">
-<img src="img/headshot1.jpg" width="45%" height="45%"/>
 <img src="img/headshot2.jpg" width="45%" height="45%"/>
 <img src="img/UTC2019-1.jpg" width="45%" height="45%"/>
 <img src="img/UTC2019-4.jpg" width="45%" height="45%"/>
-<img src="img/UTC2019-5.jpg" width="45%" height="45%"/>
 <img src="img/UTC2019-7.jpg" width="45%" height="45%"/>
+<img src="img/Orem Library 2020 -3.jpg" width="45%" height="45%"/>
+<img src="img/Orem Library 2020 -12.JPG" width="45%" height="45%"/>
+<img src="img/Orem Library 2020 -14.jpg" width="45%" height="45%"/>
+<img src="img/Orem Library 2020 -17.jpg" width="45%" height="45%"/>
+<img src="img/Orem Library 2020 -19.jpg" width="45%" height="45%"/>
+<img src="img/Orem Library 2020 -23.jpg" width="45%" height="45%"/>
 <img src="img/IMG_6956.PNG" width="45%" height="45%"/>
 <img src="img/street Fair.jpg" width="45%" height="45%"/>
 <img src="img/Orem Library 2017-18.jpg" width="45%" height="45%"/>
 <img src="img/Orem Library 2017-27.jpg" width="45%" height="45%"/>
 <!--<img src="img/IMG_7494.JPG" width="45%" height="45%"/>-->
 <img src="img/old mill.jpg" width="45%" height="45%"/>
-<img src="img/Orem Library 2017-34.jpg" width="45%" height="45%"/>
-<img src="img/IMG_7585 better blur.png" width="45%" height="45%"/>
 <!--<img src="img/IMG_7746.JPG" width="45%" height="45%"/>
 <img src="img/IMG_7820.JPG" width="45%" height="45%"/>
 <img src="img/scott 3.JPG" width="45%" height="45%"/>
