updates to website

--- a/_posts/2000-01-05-Services.md
+++ b/_posts/2000-01-05-Services.md
@@ -19,6 +19,7 @@ style: center
 <img src="img/Orem Library 2017-18.jpg" width="45%" height="45%"/>
 
 ## Looking for a professional who will entertain for a larger event as well?  From close-up card magic to stage show entertainment, I have you covered.  My show tailored for corporate events has a proven record to entertain and awe your guests.  Previous clients include (but are not limited to):<br>
+## Evermore Park<br>
 ## DoTerra<br>
 ## Young Living<br>
 ## Utah Children's Theatre
