--- a/_posts/2000-01-05-video.md
+++ b/_posts/2000-01-05-video.md
@@ -19,12 +19,12 @@ fa-icon: film
 It'll play like this funny video below! Try resizing the page!
 
 Photo layouts are also really cool and dynamically resizable. Check out the photos/gallery section at [magiciansanfrancisco.com](http://magiciansanfrancisco.com) for a demo and see [the source code](https://github.com/strongrobert/MagicianSanFrancisco) for how.-->
-## Great Scott Chamberlain
+## Scott Chamberlain Magic
 <div class="icontain"><iframe src="https://www.youtube.com/embed/kEF75qdFaDo" allowfullscreen></iframe></div><br><br>
 ## KUTV News Special Segment
 <div class="icontain"><iframe width="640" height="360" frameborder="0" marginheight="0" marginwidth="0" src="https://kutv.com/embed/news/2news-this-morning/magic-with-great-scott?external-id=e8d5cefff6664cffa0c6529fc7ddc29f"></iframe></div><br><br>
 
-## Just having a little FUN!
+## Having a little FUN!
 <div class="icontain"><iframe width="560" height="315" src="https://www.youtube.com/embed/fn4yfixTFpM" allowfullscreen></iframe></div><br><br>
 
 <div class="icontain"><iframe width="560" height="315" src="https://www.youtube.com/embed/9NRZLhx4uFs" allowfullscreen></iframe></div><br><br>
