update with logo

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -13,6 +13,7 @@ style: center
 
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
+<img src="img/SCM Logo.png" width="45%" height="45%"/>
 <h1>Utah Family Magician</h1>
 <h3>Scott Chamberlain</h3>
 
