--- a/_posts/2000-01-08-photos.md
+++ b/_posts/2000-01-08-photos.md
@@ -24,6 +24,7 @@ fa-icon: camera-retro
 <img src="img/Orem Library 2017-27.jpg" width="45%" height="45%"/>
 <!--<img src="img/IMG_7494.JPG" width="45%" height="45%"/>-->
 <img src="img/old mill.jpg" width="45%" height="45%"/>
+<img src="img/lakeview academy 2022.jpg" width="45%" height="45%"/>
 <!--<img src="img/IMG_7746.JPG" width="45%" height="45%"/>
 <img src="img/IMG_7820.JPG" width="45%" height="45%"/>
 <img src="img/scott 3.JPG" width="45%" height="45%"/>
