--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -13,7 +13,7 @@ style: center
 
 <!--<img src="img/GSM.png" alt="Great Scott Magic" width="70%" height="70%">-->
 
-<img src="img/SCM Logo.jpg" width="45%" height="45%"/>
+<img src="img/headshot2withlogo.jpg" width="45%" height="45%"/>
 <h1>Utah's Family Magician</h1>
 
 <h1>(801) 367-1125</h1>
