--- a/_posts/2000-01-08-photos.md
+++ b/_posts/2000-01-08-photos.md
@@ -9,12 +9,13 @@ fa-icon: camera-retro
 
 <div class="image-gallery">
 <img src="img/headshot2.jpg" width="45%" height="45%"/>
+<img src="img/Saratogasplashshow.jpg" width="45%" height="45%"/>
 <img src="img/UTC2019-1.jpg" width="45%" height="45%"/>
 <img src="img/UTC2019-4.jpg" width="45%" height="45%"/>
 <img src="img/UTC2019-7.jpg" width="45%" height="45%"/>
 <img src="img/Orem Library 2020 -3.jpg" width="45%" height="45%"/>
-<img src="img/Orem Library 2020 -12.JPG" width="45%" height="45%"/>
-<img src="img/Orem Library 2020 -14.JPG" width="45%" height="45%"/>
+<!--<img src="img/Orem Library 2020 -12.JPG" width="45%" height="45%"/>-->
+<!--<img src="img/Orem Library 2020 -14.JPG" width="45%" height="45%"/>-->
 <img src="img/Orem Library 2020 -17.JPG" width="45%" height="45%"/>
 <img src="img/Orem Library 2020 -19.JPG" width="45%" height="45%"/>
 <img src="img/Orem Library 2020 -23.JPG" width="45%" height="45%"/>
